Implementando funcionalidades de remover e editar publicações

--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -89,7 +89,7 @@
     </div>
   </main>
 
-  <div *ngIf="feedService.publicacaoModal">
+  <div *ngIf="postagemService.modalCadastrarPostagem">
     <app-postagem></app-postagem>
   </div>
 
