Adicionando contagem de seguidos e seguidores ao perfil

--- a/src/app/components/meu-perfil/meu-perfil.component.html
+++ b/src/app/components/meu-perfil/meu-perfil.component.html
@@ -48,8 +48,8 @@
       <div class="profile-info">
         <h2 class="profile-name">{{ usuario?.nome }}</h2>
         <p class="profile-extra">
-          <span><strong>100</strong> seguindo</span>
-          <span><strong>250</strong> seguidores</span>
+          <span><strong>{{ contagemSeguidor?.seguindo }}</strong> seguindo</span>
+          <span><strong>{{ contagemSeguidor?.seguidores }}</strong> seguidores</span>
         </p>
       </div>
 
