--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -3,4 +3,5 @@
   [usuario]="usuario"
   [postagens]="postagens"
   [isFollowing]="isFollowing"
+  [contagemSeguidor]="contagemSeguidor"
 ></app-meu-perfil>
