--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
   <h1>Entrar</h1>
   <form class="login-form" [formGroup]="loginForm">
     <div class="form-group">
-      <label for="usuario">Celular, email ou nome de usuário</label>
+      <label for="usuario">Digite seu email</label>
       <input
         type="text"
         id="usuario"
@@ -18,7 +18,7 @@
     </div>
 
     <div class="form-group">
-      <label for="senha">Senha</label>
+      <label for="senha">Digite sua senha</label>
       <input
         type="password"
         id="senha"
